// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CARD_STYLES > matches snapshot 1`] = `
"
  :host { display: block; }

  ha-card {
    padding: 4px 2px;
    box-sizing: border-box;
    font-family: var(--paper-font-body1_-_font-family, sans-serif);
    color: #888; /* gray */
    font-size: 14px;
  }

  .section-header {
    color: #2196F3; /* Material Blue */
    font-size: 15px;
    padding: 2px 0 2px 0;
    margin-top: 1px;
  }

  .game-row {
    display: flex;
    align-items: center;
    height: 28px;
    border-bottom: 1px solid rgba(255,255,255,0.04);
    gap: 0;
    position: relative;
  }

  .team-col {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 99px;
    min-width: 60px;
    overflow: hidden;
  }
  .team-col-a { text-align: right; padding-right: 3px; }
  .team-col-b { text-align: left;  padding-left: 3px;  }

  .team-name {
    font-size: 13px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 1.2;
  }
  .team-rank {
    font-size: 9px;
    line-height: 1.2;
    white-space: nowrap;
    overflow: hidden;
  }

  .logo {
    width: 30px;
    min-width: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 28px;
    overflow: hidden;
  }
  .logo-a { padding-right: 3px; }
  .logo-b { padding-left:  3px; }
  .logo img {
    width: 28px;
    height: 28px;
    object-fit: contain;
    display: block;
  }

  .score {
    width: 34px;
    min-width: 34px;
    font-size: 20px;
    font-weight: bold;
    height: 28px;
    display: flex;
    flex-direction: row;
    align-items: center;
    align-self: center;
  }
  .score-a { justify-content: flex-end; }
  .score-b { justify-content: flex-start; }

  .colon {
    width: 9px;
    min-width: 9px;
    font-size: 17px;
    font-weight: bold;
    text-align: center;
    height: 28px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .tv {
    position: absolute;
    top: 2px;
    right: 2px;
    font-size: 0;
  }
  .tv-badge {
    font-size: 8px;
    font-weight: bold;
    color: white;
    border-radius: 3px;
    padding: 1px 2px;
    white-space: nowrap;
  }
  .tv-tooltip {
    position: relative;
    cursor: default;
  }
  .tv-tooltip::after {
    content: attr(data-tooltip);
    position: absolute;
    bottom: calc(100% + 4px);
    left: 50%;
    transform: translateX(-50%);
    background: #222;
    color: #fff;
    font-size: 10px;
    font-weight: bold;
    padding: 3px 6px;
    border-radius: 4px;
    white-space: pre-wrap;
    width: max-content;
    max-width: 300px;
    text-align: left;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.15s;
    z-index: 10;
  }
  .tv-tooltip:hover::after {
    opacity: 1;
  }

  .message {
    flex: 1;
    min-width: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 13px;
    font-weight: bold;
    line-height: 1.1;
    padding-left: 4px;
  }
  .msg-sub {
    font-size: 10px;
    font-weight: normal;
    color: #666; /* dimgray */
    line-height: 1.1;
  }

  .empty {
    padding: 8px 4px;
    font-size: 13px;
    color: #555; /* dark gray */
  }

  @keyframes score-flash {
    0%, 100% { opacity: 1; }
    50% { opacity: 0; }
  }
  .score-fresh {
    animation: score-flash 0.5s ease-in-out infinite;
  }
"
`;

exports[`SportScoreboardCard snapshots > version badge HTML 1`] = `"<div id="sc-version" style="position:absolute;top:4px;right:6px;font-family:monospace;font-size:9px;color:#888;pointer-events:none;">v<!--?-->test</div>"`;

exports[`rowHtml structural snapshots > renders BYE markup 1`] = `
"<!---->
<div class="game-row">
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--scoreboard-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--scoreboard-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:transparent;color:black"><!--?-->95</div>
  <div class="colon" style="background:transparent;color:transparent"><!--?-->:</div>
  <div class="score score-b" style="background:transparent;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--scoreboard-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--scoreboard-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:darkgray">Bye</span></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders IN markup 1`] = `
"<!---->
<div class="game-row">
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--scoreboard-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--scoreboard-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:lightgray;color:brown"><!--?-->95</div>
  <div class="colon" style="background:lightgray;color:black"><!--?-->:</div>
  <div class="score score-b" style="background:lightgray;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--scoreboard-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--scoreboard-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:indianred"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders IN with fresh score 1`] = `
"<!---->
<div class="game-row">
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--scoreboard-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--scoreboard-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a score-fresh" style="background:lightgray;color:brown"><!--?-->95</div>
  <div class="colon score-fresh" style="background:lightgray;color:black"><!--?-->:</div>
  <div class="score score-b score-fresh" style="background:lightgray;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--scoreboard-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--scoreboard-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:indianred"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders POST markup 1`] = `
"<!---->
<div class="game-row">
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--scoreboard-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--scoreboard-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:transparent;color:orange"><!--?-->95</div>
  <div class="colon" style="background:transparent;color:#777"><!--?-->:</div>
  <div class="score score-b" style="background:transparent;color:darkgray"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--scoreboard-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--scoreboard-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:orange"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders PRE markup 1`] = `
"<!---->
<div class="game-row">
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--scoreboard-team-color, var(--primary-text-color, white));font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--scoreboard-team-color, var(--primary-text-color, white))"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:#303030;color:black"><!--?-->–</div>
  <div class="colon" style="background:#303030;color:black"><!--?-->:</div>
  <div class="score score-b" style="background:#303030;color:black"><!--?-->–</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--scoreboard-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--scoreboard-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:darkgray"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`rowHtml structural snapshots > renders with showLogos enabled 1`] = `
"<!---->
<div class="game-row">
  <div class="team-col team-col-a">
    <div class="team-name" style="color:var(--scoreboard-special-color, #2196F3);font-weight:bold"><!--?-->Lakers</div>
    <div class="team-rank" style="color:var(--scoreboard-special-color, #2196F3)"><!--?-->20-10</div>
  </div>
  <div class="logo logo-a"><!--?--><img alt="" src="https://cdn.example.com/lal.png"></div>
  <div class="score score-a" style="background:lightgray;color:brown"><!--?-->95</div>
  <div class="colon" style="background:lightgray;color:black"><!--?-->:</div>
  <div class="score score-b" style="background:lightgray;color:black"><!--?-->90</div>
  <div class="logo logo-b"><!--?--><img alt="" src="https://cdn.example.com/bos.png"></div>
  <div class="team-col team-col-b">
    <div class="team-name" style="color:var(--scoreboard-opponent-color, #777);font-weight:normal"><!--?-->Celtics</div>
    <div class="team-rank" style="color:var(--scoreboard-opponent-color, #777)"><!--?-->18-12</div>
  </div>
  <div class="message"><!--?--><span style="color:indianred"><!--?--></span><!--?--><!--?--></div>
  <div class="tv"><!--?--></div>
</div>"
`;

exports[`widget structural snapshots > logoHtml 1`] = `"<!----><img alt="" src="https://cdn.example.com/lal.png">"`;

exports[`widget structural snapshots > messageHtml BYE 1`] = `"<!----><span style="color:darkgray">Bye</span>"`;

exports[`widget structural snapshots > messageHtml IN short 1`] = `"<!----><span style="color:indianred"><!--?-->Q3 5:00</span><!--?--><span class="msg-sub"><!--?-->Touchdown - LAL</span><!--?-->"`;

exports[`widget structural snapshots > messageHtml IN truncated 1`] = `"<!----><span style="color:indianred"><!--?-->Q3 5:00</span><!--?--><span class="msg-sub tv-tooltip" data-tooltip="AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"><!--?-->AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA&gt;</span><!--?-->"`;

exports[`widget structural snapshots > messageHtml POST 1`] = `"<!----><span style="color:orange"><!--?-->Final</span><!--?--><span class="msg-sub"><!--?-->LAL leads 2-1</span><!--?-->"`;

exports[`widget structural snapshots > messageHtml PRE with sub 1`] = `"<!----><span style="color:darkgray"><!--?-->2h</span><!--?--><span class="msg-sub"><!--?-->Houston, LAL -3.5</span><!--?-->"`;

exports[`widget structural snapshots > tvHtml IN 1`] = `"<!----><span class="tv-badge" style="background:indianred"><!--?-->ESP&gt;</span>"`;

exports[`widget structural snapshots > tvHtml PRE single 1`] = `"<!----><span class="tv-badge" style="background:#666"><!--?-->ESP&gt;</span>"`;

exports[`widget structural snapshots > tvHtml multi-network 1`] = `"<!----><span class="tv-tooltip" data-tooltip="ESPN · ESPN2 · TNT"><!--?--><span class="tv-badge" style="background:#666"><!--?-->ESP&gt;</span></span>"`;
